apps/production/shared-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-resources
  namespace: shared-resources
  labels:
    app: shared-resources
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: shared-resources
